--- a/CODIGO/MyApp/app/src/main/AndroidManifest.xml
+++ b/CODIGO/MyApp/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity android:name=".Login" />
         <activity android:name=".Registro" />
         <activity android:name=".MenuPrincipal" />
+        <activity android:name=".FormularioTest" />
     </application>
 
 </manifest>
